--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,50 @@
-body {
+body{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  padding-top: 70px;
+}
+.navbar{
+    display: flex;
+    width: 100vw;
+    height: 70px;
+    background-color: rgb(8, 19, 11);
+    color: white;
+    left: 0;
+    top: 0;
+    position: fixed;
+
+
+}
+.navsec1{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    list-style: none;
+    flex-wrap: wrap;
+}
+.navsec2{
+    display: inline;
+    margin-right: 20px;
+    text-align: center;
+    list-style: none;
+    flex-wrap: wrap;
+    
+    align-self: center;
+}
+input{
+    text-align: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a{
+    text-decoration: none;
+    color: white;
+}
+a:hover{
+    color: orange
+}
+
+
+
+#logo{
+    width:250px;
 }
