--- a/src/index.css
+++ b/src/index.css
@@ -48,3 +48,39 @@ a:hover{
 #logo{
     width:250px;
 }
+
+/* NO PAGE */
+
+.nopage{
+    width: 100%;
+    background-color:  rgb(8, 19, 11);;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    position: fixed;
+    display:flex;
+    align-items: center;
+    text-align: center;
+   
+}
+.nopagesection{
+  
+   margin: auto;
+    width: 100%;
+}
+.nopagemessage{
+    color: azure;
+}
+#logonopage{
+  
+        width:450px;
+       
+    
+}
+.rubik-pixels-regular {
+    font-family: "Rubik Pixels", system-ui;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 40px;
+  }
+  
