--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ body{
   margin: 0;
   padding: 0;
   padding-top: 70px;
+ 
 }
 .navbar{
     display: flex;
@@ -127,4 +128,53 @@ a:hover{
 .credentialquestion{
     color: blue;
 
+}
+/* SELL PAGE */
+
+.sellpage{
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+.Sellingsection{
+    text-align: center;
+    color: rgb(233, 217, 188);
+    background-color: black;
+    border: 5px solid orange;
+    margin-top: 2%;
+    width: 600px;
+    height: 100%;
+    
+    }
+
+.sellinginput{
+    border: 3px solid rgb(223, 153, 73);
+    margin-bottom: 15px;
+    width: 300px;
+    height: 30px;
+    
+}
+.choosefile{
+    
+}
+
+/* forgotPassword */
+
+.forgotPassword{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    margin-top: 6%;
+   justify-content: center;
+   text-align: center;
+     align-items: center;
+    
+}
+#forgotImage{
+    height: 200px;
+    border: 10px solid black;
+    border-radius: 70%;
 }
